# telescope

./: .gitignore  BUILD.md  Cargo.toml  INSTALL.md  README.md  deny.toml  index.html  packager.json
.github/workflows/: pages.yml  rust-macos.yml  rust-windows.yml  rust.yml
assets/: sw.js
crates/sde/: Cargo.toml
crates/sde/src/: lib.rs  objects.rs
crates/telescope/: Cargo.toml
crates/telescope/src/: app.rs  lib.rs  main.rs
crates/telescope/src/app/: file.rs  messages.rs  settings.rs  tiles.rs
crates/webb/: Cargo.toml
crates/webb/src/: auth_service.rs  esi.rs  objects.rs
crates/webb/src/esi/: player_database.rs
src/: app.rs  data.rs  lib.rs  main.rs  table.rs
src/app/: data.rs  esi.rs  file.rs  map.rs  messages.rs  settings.rs  tab_viewer.rs  tiles.rs
