[workspace]
resolver = "2"
members = [
    "crates/telescope",
    "crates/sde",
    "crates/webb",
    # "tests/*",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.89"
version = "0.1.0"

[workspace.dependencies]
telescope = { version = "0.1.0", path = "crates/telescope", default-features = false }
sde = { version = "0.1.0", path = "crates/sde", default-features = false }
webb = { version = "0.1.0", path = "crates/webb", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"
broken_intra_doc_links = "warn"

[profile.release]
opt-level = 2 # fast and small wasm
panic = "abort"

[profile.dev]
opt-level = 0 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 0

[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
# egui-map = { git = "https://github.com/rafaga/egui-map", branch = "test" }
# egui-map = { path = "../egui-map" }
