[package]
name = "telescope"
authors = ["Rafael Amador <rafaga@duck.com>"]
description = "Application to gather intel and alert players in Eve Online"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
puffin = ["dep:puffin", "dep:puffin_http", "eframe/__screenshot", "egui-map/puffin", "sde/puffin", "webb/puffin"]

[dependencies]
eframe = { version = "0.32.3", default-features = false, features = ["accesskit", "default_fonts", "wgpu"] }
sde = { path="../sde/"}
kdtree = { version = "0.7.0" }
egui-map = { version = "0.0.15"}
open = "5.3.2"
webb = { path="../webb/", default-features = false, features = []}
chrono = "0.4.42"
tokio = { version = "1.47.1", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
egui_extras = { version = "0.32.3", features = ["all_loaders"] }
image = { version = "0.25.8", features = ["jpeg","png"] }
wgpu = "25.0.2"
puffin = {version = "0.19.1", optional = true, default-features = false}
puffin_http = {version = "0.16.1", optional = true, default-features = false}
egui_tiles = { version = "0.13.0" }
toml = "0.9.7"
hyper = { version = "1.7.0", features = ["server", "http1", "client"] }
rfesi = {version = "0.50.0", default-features = false, features = ["rustls-tls", "random_state", "validate_jwt"] }
serde = { version = "1.0.225", features = ["derive"] }
hyper-util = { version = "0.1.17", features = ["full"] }
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
directories = "6.0.0"
regex = "1.11.2"
egui-file-dialog = "0.11.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.20"
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.53"






